workflow build and test jobs fixed :smile:

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -4,9 +4,7 @@ on: [push]
 
 jobs:
   build:
-
-    needs: build
-
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - name: npm install and build webpack
@@ -19,11 +17,7 @@ jobs:
           path: public/
 
   test:
-    - uses: actions/download-artifact@master
-      with:
-        name: webpack artifacts
-        path: public
-    - name: npm install, and test
+    needs: build
     runs-on: ubuntu-latest
 
     strategy:
@@ -32,14 +26,21 @@ jobs:
         node-version: [12.x, 14.x]
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
-    - name: npm install, and test
-      run: |
-        npm install
-        npm test
-      env:
-        CI: true
+      - uses: actions/checkout@v2
+
+      - uses: actions/download-artifact@master
+        with:
+          name: webpack artifacts
+          path: public
+
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
+
+      - name: npm install, and test
+        run: |
+          npm install
+          npm test
+        env:
+          CI: true
